Preserve deterministic Director actor ordering